--- a/src/Samples.AspNetCore.Server.Data.Fake.ProviderBuilders/Samples.AspNetCore.Server.Data.Fake.ProviderBuilders.csproj
+++ b/src/Samples.AspNetCore.Server.Data.Fake.ProviderBuilders/Samples.AspNetCore.Server.Data.Fake.ProviderBuilders.csproj
@@ -2,8 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Configurations>DebugWithFake;Release</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugWithFake|AnyCPU'">
+    <OutputPath>..\bin\DebugWithFake</OutputPath>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Attest.Fake.Builders" Version="2.0.0" />
     <PackageReference Include="Attest.Fake.Moq" Version="2.0.0" />
