--- a/src/Samples.AspNetCore.Server.Data.Fake.Providers/Samples.AspNetCore.Server.Data.Fake.Providers.csproj
+++ b/src/Samples.AspNetCore.Server.Data.Fake.Providers/Samples.AspNetCore.Server.Data.Fake.Providers.csproj
@@ -1,7 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Configurations>DebugWithFake;Release</Configurations>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugWithFake|AnyCPU'">
+    <OutputPath>..\bin\DebugWithFake</OutputPath>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Samples.AspNetCore.Server.Data.Contracts.Dto\Samples.AspNetCore.Server.Data.Contracts.Dto.csproj" />
+    <ProjectReference Include="..\Samples.AspNetCore.Server.Data.Contracts.Providers\Samples.AspNetCore.Server.Data.Contracts.Providers.csproj" />
+    <ProjectReference Include="..\Samples.AspNetCore.Server.Infra\Samples.AspNetCore.Server.Infra.csproj" />
+  </ItemGroup>
 
 </Project>
